[package]
name = "nbdsrv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
tokio = { version = "1.37", features = ["full"] }
bytes = "1.6"
tracing = "0.1"
num-traits = "0.2"
num-derive = "0.4"
async-trait = "0.1"
ctor = "0.2"
libc = "0.2"
